# openssl_gmssl

./: CMakeLists.txt  README.md
include/openssl/: crypto.h  ec.h  err.h  obj_mac.h  opensslconf.h  ssl.h
output/: sm2.liyq.enc.crt.pem  sm2.liyq.enc.key.pem  sm2.liyq.sig.crt.pem  sm2.liyq.sig.key.pem
src/: client.cpp  server.cpp
